# oak

./: .gitignore  README.md  elm-package.json  faq.md  hilt.cabal  oak.cabal  package.yaml  stack.yaml
cli/: AstHelpers.hs  AstMigration.hs  AstSchema.hs  Cli.hs  Schema.hs  ShellHelpers.hs
docs/: motivations.md
evergreen/: Evergreen.hs  HiltPostgres.hs  MigrationHelpers.hs  Migrations.hs  Model.hs  ModelA.hs  ModelB.hs  ModelC.hs  Schema.hs
evergreen/seasons/: 20170807210749_Schema_be119f5af8585265f8a03acda4d86dfe6eaecb22.hs  20170807210819_Schema_749b2b631d3f5804430de055bd3c0e95bc60d7c4.hs  Schema_20170821102603_be119f5af8585265f8a03acda4d86dfe6eaecb22.hs  Schema_20170821103234_749b2b631d3f5804430de055bd3c0e95bc60d7c4.hs  Schema_20170823102524_44b2a37edc1ba22c0539e5a9ead21c4b2adf5898.hs  Schema_20170823221628_c1474a1f412a2b4bb8f7c24a4ab5b54398825258.hs  Schema_20170908170731_44b2a37edc1ba22c0539e5a9ead21c4b2adf5898.hs  Schema_20171103091331_8fa6cea725448309c8292f8179b5bc456c08d5bb.hs  Schema_20171105162631_3038a271e40837c57156402364c9118dfebd9573.hs  Schema_20171105173923_d7cabc46feefe09136f396fc01c558f7a5b4c31a.hs
examples/: AppSample.hs  Run.hs
src/: App.hs  AppTypes.hs  AstDatabase.hs  AstHelpers.hs  AstMigration.hs  AstMigrations.hs  AstSchema.hs  Elm.hs  Oak.elm  Oak.hs  OakRuntime.hs  Runtime.hs  ShellHelpers.hs
test/Evergreen/: MigrationSpec.hs
types/: AstDatabase.hs  AstHelpers.hs  AstMigration.hs  AstMigrations.hs  AstSchema.hs  Evergreen.hs  MigrationsAst.hs  Schema.hs  ShellHelpers.hs  Status.hs
